Fix LinkedIn URL to correct profile

--- a/resume.html
+++ b/resume.html
@@ -1271,7 +1271,7 @@
             }
         };
 
-        const qrUrl = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://linkedin.com/in/silvestr-liskin";
+        const qrUrl = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://www.linkedin.com/in/silvestr-liskin-ab712920b/";
 
         function setLang(l) {
             const d = content[l];
@@ -1307,7 +1307,7 @@
                         <div class="contact-item"><i class="fas fa-envelope"></i> <a href="mailto:silvlis@outlook.com">silvlis@outlook.com</a></div>
                         <div class="contact-item"><i class="fas fa-phone"></i> ${d.contact.phone}</div>
                         <div class="contact-item"><i class="fas fa-map-marker-alt"></i> ${d.contact.loc}</div>
-                        <div class="contact-item"><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/silvestr-liskin">silvestr-liskin</a></div>
+                        <div class="contact-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/silvestr-liskin-ab712920b/">silvestr-liskin</a></div>
                         <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/SilvestrLiskin">SilvestrLiskin</a></div>
                         
                         <div class="map-container">
