Fix Turkey map SVG to realistic outline, adjust Bursa pin position

--- a/resume.html
+++ b/resume.html
@@ -1311,12 +1311,12 @@
                         <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/SilvestrLiskin">SilvestrLiskin</a></div>
                         
                         <div class="map-container">
-                            <svg class="map-turkey" viewBox="0 0 100 50">
-                                <path d="M5,25 Q15,15 30,20 T50,18 T70,22 T90,20 Q95,25 90,30 T70,35 T50,32 T30,35 T10,30 Z" 
-                                      fill="currentColor" opacity="0.3"/>
+                            <svg class="map-turkey" viewBox="0 0 200 100" preserveAspectRatio="xMidYMid meet">
+                                <path d="M15,45 L18,42 L22,40 L25,38 L23,35 L25,32 L30,33 L35,30 L32,27 L35,25 L40,27 L45,25 L48,27 L52,25 L55,28 L60,26 L65,28 L70,25 L75,27 L80,25 L85,28 L90,26 L95,28 L100,25 L105,27 L110,25 L115,28 L120,26 L125,28 L130,30 L135,28 L140,30 L145,28 L150,30 L155,32 L160,30 L165,32 L170,35 L175,38 L180,40 L185,45 L188,50 L185,55 L180,58 L175,60 L170,58 L165,60 L160,58 L155,55 L150,58 L145,55 L140,58 L135,60 L130,58 L125,60 L120,58 L115,60 L110,58 L105,60 L100,58 L95,60 L90,58 L85,55 L80,58 L75,55 L70,58 L65,55 L60,58 L55,55 L50,58 L45,55 L40,58 L35,55 L30,58 L25,55 L22,52 L18,50 L15,48 Z" 
+                                      fill="currentColor" opacity="0.25"/>
                             </svg>
-                            <div class="map-pin"></div>
-                            <div class="map-label">${d.map_label}</div>
+                            <div class="map-pin" style="top:38%; left:18%"></div>
+                            <div class="map-label" style="top:28%; left:24%">${d.map_label}</div>
                         </div>
                     </div>
 
