--- a/resume.html
+++ b/resume.html
@@ -1310,13 +1310,12 @@
                         <div class="contact-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/silvestr-liskin-ab712920b/">silvestr-liskin</a></div>
                         <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/SilvestrLiskin">SilvestrLiskin</a></div>
                         
-                        <div class="map-container">
-                            <svg class="map-turkey" viewBox="0 0 200 100" preserveAspectRatio="xMidYMid meet">
-                                <path d="M15,45 L18,42 L22,40 L25,38 L23,35 L25,32 L30,33 L35,30 L32,27 L35,25 L40,27 L45,25 L48,27 L52,25 L55,28 L60,26 L65,28 L70,25 L75,27 L80,25 L85,28 L90,26 L95,28 L100,25 L105,27 L110,25 L115,28 L120,26 L125,28 L130,30 L135,28 L140,30 L145,28 L150,30 L155,32 L160,30 L165,32 L170,35 L175,38 L180,40 L185,45 L188,50 L185,55 L180,58 L175,60 L170,58 L165,60 L160,58 L155,55 L150,58 L145,55 L140,58 L135,60 L130,58 L125,60 L120,58 L115,60 L110,58 L105,60 L100,58 L95,60 L90,58 L85,55 L80,58 L75,55 L70,58 L65,55 L60,58 L55,55 L50,58 L45,55 L40,58 L35,55 L30,58 L25,55 L22,52 L18,50 L15,48 Z" 
-                                      fill="currentColor" opacity="0.25"/>
-                            </svg>
-                            <div class="map-pin" style="top:38%; left:18%"></div>
-                            <div class="map-label" style="top:28%; left:24%">${d.map_label}</div>
+                        <div class="map-container" style="background: linear-gradient(135deg, #1a2a2a 0%, #0a1515 100%);">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Turkey_location_map.svg" 
+                                 alt="Turkey Map" 
+                                 style="width:100%; height:100%; object-fit:cover; opacity:0.4; filter:grayscale(100%) brightness(0.6);">
+                            <div class="map-pin" style="top:28%; left:22%"></div>
+                            <div class="map-label" style="top:18%; left:28%">${d.map_label}</div>
                         </div>
                     </div>
 
